fixed mobile spacing

--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,9 @@
 }
 
 @media screen and (max-width: 480px) {
- .landing div {  padding-top: 1em; font-size:8rem; }
+ .landing div {  padding-top: 2em; font-size:8rem; }
  .landing span div { font-size:4rem; }
+ li[role="presentation"] a { font-size:12px; }
 }
 
 html, body {
